Centered posts and fixed alignment

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -8,6 +8,11 @@ html, body {
     background-color:      #000;
 }
 
+.posts-wrapper { 
+    margin:                0 auto;
+    width:                 90%;
+}
+
 .posts { margin:           0 3em 3em 3em; }
 
 .post {
